--- a/packages/rettangoli-ui/src/components/sliderInput/sliderInput.view.yaml
+++ b/packages/rettangoli-ui/src/components/sliderInput/sliderInput.view.yaml
@@ -3,7 +3,7 @@ elementName: rtgl-slider-input
 viewDataSchema:
   type: object
 
-attrsSchema:
+propsSchema:
   type: object
   properties:
     value:
