--- a/packages/rettangoli-ui/src/components/popoverInput/popoverInput.view.yaml
+++ b/packages/rettangoli-ui/src/components/popoverInput/popoverInput.view.yaml
@@ -3,7 +3,7 @@ elementName: rtgl-popover-input
 viewDataSchema:
   type: object
 
-attrsSchema:
+propsSchema:
   type: object
   properties:
     value:
@@ -12,7 +12,7 @@ attrsSchema:
       type: string
 
 refs:
-  text-display:
+  textDisplay:
     eventListeners:
       click:
         handler: handleTextClick
@@ -36,7 +36,7 @@ events:
   value-change: {}
 
 template:
-  - rtgl-view#text-display w=f cur=p:
+  - rtgl-view#textDisplay w=f cur=p:
       - rtgl-text: ${value}
   - rtgl-popover#popover ?open=${isOpen} x=${position.x} y=${position.y}:
       - rtgl-view g=md w=240 slot=content bgc=bg br=md:
