--- a/packages/rettangoli-ui/src/components/tabs/tabs.view.yaml
+++ b/packages/rettangoli-ui/src/components/tabs/tabs.view.yaml
@@ -39,15 +39,11 @@ propsSchema:
             type: string
           testId:
             type: string
-
-attrsSchema:
-  type: object
-  properties:
-    selected-tab:
+    selectedTab:
       type: string
 
 refs:
-  tab-*:
+  tab*:
     eventListeners:
       click:
         handler: handleClickItem
@@ -61,6 +57,6 @@ events:
 
 template:
   - rtgl-view d=h g=sm bgc=mu p=sm br=lg ${containerAttrString}:
-    - $for item in items:
-        - rtgl-view#tab-${item.id} data-id=${item.id} cur=p bgc=${item.bgColor} bw=xs bc=${item.borderColor} pv=md ph=lg br=lg data-testid=${item.testId}:
+    - $for item, i in items:
+        - rtgl-view#tab${i} data-id=${item.id} cur=p bgc=${item.bgColor} bw=xs bc=${item.borderColor} pv=md ph=lg br=lg data-testid=${item.testId}:
           - rtgl-text s=sm c=${item.textColor}: "${item.label}"
